--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>My App Runner Demo</title>
 </head>
 <body>
-    <h1>Hello from NGINX + App Runner!</h1>
+    <h1>Hello from NGINX!</h1>
 </body>
 </html>
